fix z-index

--- a/src/css/proposal.css
+++ b/src/css/proposal.css
@@ -16,15 +16,25 @@
     background: linear-gradient(85deg, #4DC274 2.25%, #BEE8CC 131.25%);
 }
 
-/* ???????????????????????????????????????????????? */
-
 .proposal-text {
     border-radius: 16px;
     background-color: var(--white);
     padding: 40px 20.85px 40px 19.15px;
 
     position: relative;
-    z-index: 1000;
+    z-index: 10;
+}
+
+.proposal-text::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    background-color: var(--white);
+    z-index: -1;
 }
 
 .proposal-overlay::before,
@@ -51,8 +61,6 @@
     flex-shrink: 0;
     background-color: var(--white-transparent);
 }
-
-/* ???????????????????????????????????????????????? */
 
 .proposal-description {
     color: var(--black);
@@ -111,20 +119,33 @@
 @media screen and (min-width: 768px) {
 
     .proposal-wrapper  {
-        padding: 64px 32px 92.92px 32px;
-    }
+        padding: 64px 18px 92.92px 18px;
+        border-radius: 30px;
+}
 
     .proposal-section-title {
         font-size: 60px;
         line-height: 1.17;
+        margin-left: 14px;
+        margin-right: 14px;
         margin-bottom: 83.08px;
     }
 
     .proposal-text {
         padding: 64.92px 32px 63.08px 32px;
+        border-radius: 30px;
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
+    }
+
+    .proposal-text::after {
+        border-radius: 30px;
+    }
+
+    .proposal-overlay::before,
+    .proposal-overlay::after {
+        border-radius: 30px;
     }
 
     .proposal-description {
@@ -150,6 +171,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        z-index: 10;
     }
 
     .proposal-list {
@@ -166,6 +188,7 @@
         display: block;
         width: 214px;
         height: 263px;
+        z-index: 8;
     }
 
     .proposal-overlay::before {
@@ -176,6 +199,7 @@
 
     .proposal-overlay::after {
         right: 0;
+        top: 8px;
         transform: rotate(10.665deg);
         flex-shrink: 0;
         background-color: var(--white-transparent);
@@ -195,7 +219,7 @@
 
     .proposal-text {
         padding: 64.87px 32px 63.13px 64px;
-    }
+}
 
     .proposal-description {
         margin-bottom: 42px
